<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        android:background="@color/bg_color"
    tools:context=".registeractivity.ForgetPasswordActivity">


        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/backbtn"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="36dp"
                android:paddingRight="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="center"
                        android:text="Reset Password"
                        android:textStyle="bold"
                        android:textColor="#3c4b5d"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="center"
                        android:text="@string/reset_pass_message"
                        android:textColor="@color/darkgrey"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/namell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:fontFamily="@font/proximanovaregular"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp" />

                </LinearLayout>

                <Button

                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/circularbluebordersolid"
                    android:fontFamily="@font/proximanovaregular"
                    android:padding="16dp"
                    android:text="Reset My Password"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/link_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="Continue Login?"
                    android:fontFamily="@font/proximanovaregular"
                    android:textColor="@color/darkgrey"
                    android:textSize="16dip" />

            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </RelativeLayout>