<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        android:background="@color/bg_color"
    tools:context=".registeractivity.RegisterActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backbtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/backbtn"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:padding="4dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="26dp"
                android:paddingRight="24dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titletxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="center"
                        android:text="@string/new_account"
                        android:textColor="#3c4b5d"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/desctxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="center"
                        android:text="@string/signup_desc"
                        android:textColor="@color/darkgrey"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/userinfo_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <LinearLayout
                        android:id="@+id/namell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:gravity="center"
                        android:padding="18dp">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/proximanovaregular"
                            android:hint="Name"
                            android:inputType="text"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/emailll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:gravity="center"
                        android:padding="18dp">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/proximanovaregular"
                            android:hint="Email"
                            android:inputType="textEmailAddress"
                            android:textSize="14sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/passwordll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:gravity="center"
                        android:padding="18dp">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/proximanovaregular"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:id="@+id/phonenumberll"
                        android:gravity="center_vertical">




                        <EditText
                            android:id="@+id/input_phonenumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="PhoneNumber"
                            android:textSize="14sp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/circularbordersolid"
                            android:inputType="phone" />
                    </LinearLayout>




                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="14dp"
                        android:background="@drawable/circularbluebordersolid"
                        android:fontFamily="@font/proximanovaregular"
                        android:padding="16dp"
                        android:text="Continue"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/verification_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp">





                </LinearLayout>

                <LinearLayout
                    android:id="@+id/link_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/ALreadt_Member"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="center"
                        android:text="Already a member?"
                        android:textColor="#3c4b5d"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/loginBtnSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="center"
                        android:text=" Login"
                        android:textColor="#8e9cfe"
                        android:textSize="16dip" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>